--- a/src/Card.module.css
+++ b/src/Card.module.css
@@ -26,11 +26,12 @@
 }
 
 .card__img{
-    width: 100%;
+    max-width: 100%;
     height: 100%;
-    box-sizing: border-box;
     background-image: url(../public/motor.png);
     background-repeat: no-repeat;
+    box-sizing: border-box;
+    object-fit: fill;
 }
 
 .card__heart{
@@ -57,6 +58,9 @@
     line-height: 24px;
     font-weight: 600;
     margin: 0 0 5px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .card__otherInfo{
@@ -244,18 +248,25 @@
     }
 
     .card__header{
-        width: 100%;
+        max-width: 162px;
         height: 160px;
-        position: relative;
-    
+    }
+
+    .card__img{
+        background-image: url(../public/motorMobile.png);
+        height: 160px;
+        background-size: 162px 160px;
+        border-radius: 5px;
+        
     }
 
     .card__raiting{
-        margin: 10px 0;
-        background-image: url(../ratMobile.png);
+        margin: 0;
+        background-image: url(../public/ratMobile.png);
     }
 
     .card__name{
+        max-height: 18px;
         font-size: 10px;
         line-height: 18px;
         font-weight: 600;
@@ -327,6 +338,11 @@
     .card__bin{
         max-width: 24px;
         max-height: 24px;
+        background-image: url(../public/binMobile.png);
+        object-fit: cover;
+        box-sizing: border-box
     }
+
+    
 
 }
