--- a/src/TableProducts.module.css
+++ b/src/TableProducts.module.css
@@ -1,10 +1,14 @@
 .main{
-    padding: 15px 10px;
-    max-width: 1432px;
-    width: 100%;
+    padding: 15px 0;
+    max-width: 1480px;
+    width: calc(100% - 100px);
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .title{
+    text-align: center;
     margin: 0;
     font-weight: 600;
     font-size: 35px;
@@ -13,10 +17,10 @@
 }
 
 .TableProducts{
-    margin: 10px 0 0;
+    margin: 10px auto 0;
+    width: 100%;
     padding: 0;
     max-width: 1440px;
-    width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
@@ -27,7 +31,6 @@
 .TableProducts{
     grid-template-columns: repeat(3, 1fr);
     column-gap: 30px;
-    max-width: 70%;
 }
 }
 
@@ -36,7 +39,6 @@
     .TableProducts{
         grid-template-columns: repeat(2, 1fr);
         column-gap: 20px;
-        max-width: 80%;
     }
     }
 @media screen and (max-width: 900px) {
@@ -45,7 +47,7 @@
     }
 }
 
-@media screen and (max-width: 730px) {
+@media screen and (max-width: 760px) {
     .TableProducts{
         grid-template-columns: repeat(3, 1fr);
     }
